# the-loop

./: .gitignore  CLAUDE.md  Cargo.toml  DICTIONARY.md  README.md  design.md  dist-workspace.toml  eslint.config.js  ledger.md  package-lock.json  package.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: build.md  derive.md  drive.md  plan.md  validate.md
cli/: Cargo.toml
cli/config/: hook-defaults.json  model-bindings.json
cli/config/executors/: grok.md
cli/src/: calibration.rs  context.rs  executors.rs  git.rs  graph.rs  io.rs  lib.rs  main.rs  plan.rs  recorded_bindings.rs  settings.rs  settings_write.rs  splice.rs  status.rs  validate.rs
cli/src/commands/: calibration_summarize.rs  executors_list.rs  graph.rs  hooks_list.rs  hooks_set.rs  mod.rs  models_list.rs  plan.rs  prepare_execution_context.rs  worktree.rs
cli/tests/: cli_process.rs
commands/: the-loop.md
config/: model-bindings.json
docs/: TODO.md  agentic-dev-loop-design-decisions.md  architecture.md  feature-graph.json  feature-graph.md  glossary.md
eval/: README.md  judge.js  matrix.json  run.js  selfcheck.js  summarize.js  verify.js
executors/: grok.md
plugin/: package.json
protocols/: branch-and-booking.md
src/: blocks.js  corridor.js  entry.js  escalation.js  executor-registry.js  executors.js  feature-schema.js  index.js  launch.js  ledger.js  models.js  note.js  parse.js  plan.js  prepare-execution-context.js  propose-next-action.js  render.js  resolve.js  schema.js  ship.js  splice-workflow-description.js  status-summary.js  status.js  (+2 more)
(+520 files in other folders)
