[workspace]
members = ["cli"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
